[gd_scene load_steps=24 format=3 uid="uid://fn3l6wmscxgj"]

[ext_resource type="Script" path="res://addons/Uzil/Test/test_active.gd" id="1_sbaod"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Advance/StateMachine/_test/test_state_machine.gd" id="2_63g2i"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Basic/UserSave/_test/test_user_save.gd" id="2_77l0o"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Basic/I18N/_test/test_i18n.gd" id="2_arm1m"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Core/ObjPool/_test/test_obj_pool.gd" id="2_ppo62"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Basic/Flow/_test/test_flow.gd" id="3_23b3a"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Advance/Options/_test/test_options.gd" id="3_h377w"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Core/Times/_test/test_times.gd" id="3_k24ms"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Advance/Audio/_test/test_audio.gd" id="4_2n6p3"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Core/SumVals/_test/test_sum_vals.gd" id="4_fvnex"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Core/Vars/_test/test_vars.gd" id="5_40eay"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Basic/InputPipe/_test/test_input_pipe.gd" id="5_58eyq"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Advance/PageCard/_test/test_page_card.gd" id="5_l6wes"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Advance/PageCard/page_card_inst.gd" id="6_23271"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Core/_test/test_vals.gd" id="6_btvsu"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Basic/TagSearch/_test/test_tag_search.gd" id="6_py1sm"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Core/Invoker/_test/test_invoker.gd" id="6_yve1k"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Util/_test/test_async.gd" id="7_iis54"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Advance/PageCard/page_card_page.gd" id="7_rpcj7"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Core/Evt/_test/test_evt.gd" id="8_8o3uu"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Advance/PageCard/page_card_card.gd" id="8_euem7"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Util/_test/test_input.gd" id="8_pb4c4"]
[ext_resource type="Script" path="res://addons/Uzil/Scripts/Util/RNG/_test/test_rng.gd" id="9_cv2j1"]

[node name="Uzil_Test" type="Node"]

[node name="scene" type="Node" parent="."]

[node name="debug_msg" type="CodeEdit" parent="scene"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 77.0
offset_top = 60.0
offset_right = -77.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Camera3D" type="Camera3D" parent="scene"]
transform = Transform3D(1, 0, 0, 0, 0.92755, 0.3737, 0, -0.3737, 0.92755, 0, 0.686304, 1.33365)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="scene"]
transform = Transform3D(0.812908, 0.186443, -0.551743, 0, 0.947372, 0.320134, 0.582393, -0.260239, 0.770126, 0, 3.74558, 0)

[node name="set_test_target" type="Node" parent="." node_paths=PackedStringArray("active_target")]
script = ExtResource("1_sbaod")
active_target = NodePath("../Advance/PageCard")

[node name="============" type="Node" parent="."]

[node name="Advance" type="Node" parent="."]

[node name="StateMachine" type="Node" parent="Advance"]
script = ExtResource("2_63g2i")

[node name="Options" type="Node" parent="Advance"]
script = ExtResource("3_h377w")

[node name="Audio" type="Node" parent="Advance"]
script = ExtResource("4_2n6p3")

[node name="PageCard" type="Node" parent="Advance"]
script = ExtResource("5_l6wes")
pagecard_inst_nodepath = NodePath("inst")

[node name="inst" type="Node" parent="Advance/PageCard"]
script = ExtResource("6_23271")
pages_nodepath = Array[NodePath]([NodePath("pages/page1"), NodePath("pages/page2"), NodePath("pages/page3")])
cards_nodepath = Array[NodePath]([NodePath("cards/card1"), NodePath("cards/card2")])

[node name="CSGBox3D" type="CSGBox3D" parent="Advance/PageCard/inst"]
transform = Transform3D(0.767931, 0, -0.624726, 0, 1, 0, 0.624726, 0, 0.767931, 0, 0, -0.0939036)

[node name="Panel" type="Panel" parent="Advance/PageCard/inst"]
offset_left = 286.0
offset_top = 177.0
offset_right = 477.0
offset_bottom = 298.0

[node name="pages" type="Node" parent="Advance/PageCard/inst"]

[node name="page1" type="Node" parent="Advance/PageCard/inst/pages"]
script = ExtResource("7_rpcj7")
cards = Array[String](["card1"])

[node name="page2" type="Node" parent="Advance/PageCard/inst/pages"]
script = ExtResource("7_rpcj7")
cards = Array[String](["card2"])

[node name="page3" type="Node" parent="Advance/PageCard/inst/pages"]
script = ExtResource("7_rpcj7")
cards = Array[String](["card1", "card2"])

[node name="cards" type="Node" parent="Advance/PageCard/inst"]

[node name="card1" type="Node" parent="Advance/PageCard/inst/cards"]
script = ExtResource("8_euem7")
target_nodepath = NodePath("../../CSGBox3D")

[node name="card2" type="Node" parent="Advance/PageCard/inst/cards"]
script = ExtResource("8_euem7")
target_nodepath = NodePath("../../Panel")

[node name="Basic" type="Node" parent="."]

[node name="UserSave" type="Node" parent="Basic"]
script = ExtResource("2_77l0o")

[node name="I18N" type="Node" parent="Basic"]
script = ExtResource("2_arm1m")

[node name="Flow" type="Node" parent="Basic"]
script = ExtResource("3_23b3a")

[node name="InputPipe" type="Node" parent="Basic"]
script = ExtResource("5_58eyq")

[node name="TagSearch" type="Node" parent="Basic"]
script = ExtResource("6_py1sm")

[node name="Core" type="Node" parent="."]

[node name="Vals" type="Node" parent="Core"]
script = ExtResource("6_btvsu")

[node name="Vars" type="Node" parent="Core"]
script = ExtResource("5_40eay")

[node name="SumVals" type="Node" parent="Core"]
script = ExtResource("4_fvnex")

[node name="Times" type="Node" parent="Core"]
script = ExtResource("3_k24ms")
spin_panels = Array[NodePath]([NodePath("PanelContainer"), NodePath("PanelContainer2")])

[node name="PanelContainer" type="PanelContainer" parent="Core/Times"]
visible = false
offset_left = 117.0
offset_top = 118.0
offset_right = 157.0
offset_bottom = 158.0

[node name="PanelContainer2" type="PanelContainer" parent="Core/Times"]
visible = false
offset_left = 247.0
offset_top = 116.0
offset_right = 287.0
offset_bottom = 156.0

[node name="Invoker" type="Node" parent="Core"]
script = ExtResource("6_yve1k")

[node name="ObjPool" type="Node" parent="Core"]
script = ExtResource("2_ppo62")

[node name="Evt" type="Node" parent="Core"]
script = ExtResource("8_8o3uu")

[node name="Util" type="Node" parent="."]

[node name="async" type="Node" parent="Util"]
script = ExtResource("7_iis54")

[node name="input" type="Node" parent="Util"]
script = ExtResource("8_pb4c4")

[node name="RNG" type="Node" parent="Util"]
script = ExtResource("9_cv2j1")
